assets/scss/custom/pages/_landing.scss
/* ... */
.adopters-card-icon img {
    width: 100%;
    height: auto;
    max-height: 64px;
    min-height: 64px;
}

/* Adopters section CSS end */


/* Responsive styles */

/* Min Width 1200px and Max Width 1399px */

@media (min-width: 1200px) and (max-width: 1399px) {
	.hero-content {
		padding-right: 30px !important;
	}

	.hero-content h1 {
		font-size: 60px;
		line-height: 65px;
	}

	.features-card-container {
		column-gap: 70px;
	}

	.adopters-card-container {
		column-gap: 70px;
	}
}

/* Min Width 992px and Max Width 1199px */

@media (min-width: 992px) and (max-width: 1199px) {
	.hero-content {
		padding-right: 30px !important;
	}

	.hero-content h1,
	.section-top h2,
	.get-started-content h2 {
		font-size: 48px;
		line-height: 55px;
	}

	.deployment-content h2 {
		font-size: 40px;
		line-height: 48px;
	}

	.features-card-container {
		gap: 44px;
	}

	.adopters-card-container {
		gap: 44px;
	}

	.news-card {
		padding: 22px 24px 80px;
	}

	.time {
		padding-left: 30px;
	}
}

/* Min Width 768px and Max Width 991px */

@media (min-width: 768px) and (max-width: 991px) {

	.hero-img,
	.deployment-img {
		padding-top: 60px;
		text-align: center;
	}

	.hero-content h1,
	.section-top h2,
	.get-started-content h2 {
		font-size: 48px;
		line-height: 55px;
	}

	.deployment-content h2 {
		font-size: 40px;
		line-height: 48px;
	}

	.features-card-container {
		gap: 44px;
	}

	.adopters-card-container {
		gap: 44px;
	}

	.news-card {
		padding: 22px 24px 80px;
	}

	.time {
		padding-left: 30px;
	}

	.hero-content h1,
	.section-top h2,
	.get-started-content h2 {
		font-size: 48px;
		line-height: 55px;
	}

	.deployment-content h2 {
		font-size: 40px;
		line-height: 48px;
	}

	.features-card-container {
		grid-template-columns: repeat(2, 1fr);
		gap: 44px;
	}

	.adopters-card-container {
		grid-template-columns: repeat(2, 1fr);
		gap: 44px;
	}

	.news-card {
		padding: 22px 24px 100px;
	}

	.time {
		padding-left: 20px;
	}
}

/* Min Width 300px and Max Width 767px */

@media (min-width: 300px) and (max-width: 767px) {
	.hero-wrapper {
		padding: 56px 0 100px;
	}

	.hero-wrapper::after {
		max-width: 410px;
		width: 100%;
		height: 410px;
	}

	.hero-content h1 {
		font-size: 48px;
		line-height: 55px;
	}

	.hero-content p {
		padding: 30px 0 40px;
	}

	.hero-img,
	.deployment-img {
		padding-top: 50px;
		text-align: center;
	}

	.hero-img {
		margin-right: 35px;
	}

	.section-top h2,
	.get-started-content h2 {
		font-size: 32px;
		line-height: 40px;
	}

	.deployment-wrapper {
		padding: 60px 0;
	}

	.deployment-content h2 {
		font-size: 40px;
		line-height: 48px;
	}

	.features-card-container {
		gap: 44px;
	}

	.adopters-card-container {
		gap: 44px;
	}

	.news-card {
		padding: 22px 24px 80px;
	}

	.time {
		padding-left: 30px;
	}

	.hero-content h1,
	.section-top h2,
	.get-started-content h2 {
		font-size: 38px;
		line-height: 44px;
	}

	.deployment-content h2 {
		font-size: 32px;
		line-height: 40px;
	}

	.features-card-container {
		grid-template-columns: repeat(1, 1fr);
		gap: 32px;
		padding-top: 32px;
	}

	.adopters-card-container {
		grid-template-columns: repeat(1, 1fr);
		gap: 32px;
		padding-top: 32px;
	}

	.action-video {
		margin-top: 40px;
		padding: 10px;
	}

	.news-wrapper {
		padding: 0px 0 100px;
	}

	.news-container {
		padding-top: 0;
	}

	.news-card {
		padding: 22px 24px 60px;
	}

	.time {
		padding-left: 20px;
	}

	.news-card-img,
	.news-card-img img {
		height: initial;
	}

	.get-started-container {
		padding: 32px 10px;
	}
}

